fix: fix broken styles

--- a/src/components/controls/hormones/Hormones.css
+++ b/src/components/controls/hormones/Hormones.css
@@ -3,8 +3,7 @@
   margin: auto;
 }
 .hormones-table {
-  background: rgb(169, 169, 169);
-  border: 7px solid;
+  border: 4px solid #DDD;
   padding: 1rem 4rem;
 }
 .lh-name,
